--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,7 +19,7 @@ bin_PROGRAMS = pluto
 
 pluto_SOURCES = constraints.c constraints_polylib.c constraints_isl.c math_support.c ddg.c transforms.c pluto.c post_transform.c framework.c pluto_codegen_if.c polyloop.c ast_transform.c main.c constraints.h math_support.h pluto.h program.c program.h tile.c unit_tests.c
 pluto_CPPFLAGS = -O3 -funroll-loops -fopenmp \
-   -DSCOPLIB_INT_T_IS_LONGLONG -DCLOOG_INT_GMP \
+   -DSCOPLIB_INT_T_IS_MP -DPIP_WIDTH_MP -DCLOOG_INT_GMP \
    -I../include \
    $(PIPLIB_INCLUDE) \
    $(CLAN_INCLUDE) \
@@ -45,7 +45,7 @@ lib_LTLIBRARIES = libpluto.la
 # libpluto doesn't use polylib-based functions
 libpluto_la_SOURCES = constraints.c constraints_isl.c math_support.c ddg.c transforms.c pluto.c post_transform.c framework.c polyloop.c libpluto.c constraints.h math_support.h pluto.h program.c program.h tile.c
 libpluto_la_CPPFLAGS = -O3 -funroll-loops -fopenmp \
-   -DSCOPLIB_INT_T_IS_LONGLONG -DCLOOG_INT_GMP \
+   -DSCOPLIB_INT_T_IS_MP -DPIP_WIDTH_MP -DCLOOG_INT_GMP \
    -I../include \
    $(PIPLIB_INCLUDE) \
    $(CLAN_INCLUDE) \
